# fancy-yield-curve

./: Cargo.toml  Makefile  README.org  pyproject.toml
fancy_yield_curve/: __init__.py  direct_capture.py  integrate.py  yield_curve.py
src/: cross_section.rs  cross_section.rs~  gaussian.rs  gaussian.rs~  lib.rs  simple_yield.rs  target_profile.rs
