[package]
name = "fancy-yield-curve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fancy_yield_curve"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
rayon = "*"
nalgebra = "0.32.3"
GSL = "7.0.0"